<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GuardarPersonas</string>
    <string name="action_settings">Settings</string>
    <string name="guardar">Save</string>
    <string name="nuevo">New</string>
    <string name="editar">Edit</string>
    <string name="borrar">Delete</string>
    <string name="cancelar">Cancel</string>
    <string name="volver">Volver</string>
    <string name="aceptar">Aceptar</string>
    <string name="buscar">Buscar</string>
    <string name="nombreLabel">Nombre</string>
    <string name="nombreHint">Introduce tu nombre</string>
    <string name="apellidoLabel">Apellido</string>
    <string name="apelidoHint">Introduce tu apellido</string>
    <string name="telfLabel">Telefono</string>
    <string name="telfHint">Introduce tu telefono</string>
    <string name="descLabel">Descripcion</string>
    <string name="grupoLabel">Grupo</string>
    <string name="descHint">Introduce la descripcion</string>
    <string name="grupoHint">Introduce la descripcion</string>
    <string name="nombreBuscarHint">por nombre</string>
    <string name="apellidoBuscarHint">por apellido</string>
    <string name="telfBuscarHint">por telefono</string>
    <string name="descBuscarHint">por descripcion</string>
    <string name="title_activity_guardar">GuardarActivity</string>
    <string name="title_activity_buscar">Buscar</string>
    <string name="hello_world">Hello world!</string>
    
    <string name="mensaje">¿Estas seguro de que quieres eliminar?</string>
    <string name="titulo">Eliminar</string>
    
    <string name="ok">Aceptar</string>
    <string name="cancel">Cancelar</string>

</resources>
