<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.guardarpersonas.GuardarActivity" >
    
     <Button 
        android:id="@+id/guardar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:text="@string/guardar"/>
     <Button 
        android:id="@+id/cancelar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@id/guardar"
        android:text="@string/cancelar"/>

    <LinearLayout 
        android:id="@+id/formulario2"
        android:layout_below="@id/guardar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        
        <LinearLayout 
            android:id="@+id/linea1"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center"
	        android:orientation="horizontal">
	        
            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvNombre"
                android:text="@string/nombreLabel"/>
            
            <EditText android:id="@+id/nombreGuardar"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nombreHint"/>
            
        </LinearLayout>
        <LinearLayout 
            android:id="@+id/linea2"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center"
	        android:orientation="horizontal">
	        
            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvApellido"
                android:text="@string/apellidoLabel"/>
            <EditText android:id="@+id/apellidoGuardar"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/apelidoHint"/>
            
        </LinearLayout>
        <LinearLayout 
            android:id="@+id/linea3"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center"
	        android:orientation="horizontal">
	        
            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvTel"
                android:text="@string/telfLabel"/>
            <EditText android:id="@+id/telfGuardar"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/telfHint"/>
            
        </LinearLayout>
        <LinearLayout 
            android:id="@+id/linea4"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center"
	        android:orientation="horizontal">
	        
            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvdesc"
                android:text="@string/descLabel"/>
            <EditText android:id="@+id/descGuardar"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/descHint"/>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
